# dj_fav_admin

./: MANIFEST.in  boot_django.py  db.sqlite3  makemigrations.py  manage.py  requirements.txt  setup.cfg  setup.py
dj_fav_admin/: asgi.py  settings.py  urls.py  wsgi.py
dj_fav_admin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
favorite/: models.py
favorite/migrations/: 0001_initial.py
trollism1234.egg-info/: PKG-INFO  SOURCES.txt
