# setup.cfg
[metadata]
name = sampleproject123
version = 5.0
description = Sample installable django app
long_description = file:README.rst
url = https://github.com/achintyachaudhary/dj_fav_admin
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    chaudhary == 1.0